--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
     <head>
         <title>heroSlider demo</title>
-        <!-- <link rel="stylesheet" type="text/css" href="assets/styles/heroSlider.css" /> -->
         <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
+        <link rel="stylesheet" type="text/css" href="assets/styles/heroSlider.css" />
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="assets/javascript/heroSlider.js"></script>
     </head>
     <body>
-        <div id="heroSlider">
-            <div class="heroSlide">
+        <div id="hero-slider">
+            <div class="hero-slide" style="background: rgb(155,0,0);">
                 hero unit 1
             </div>
-            <div class="heroSlide">
+            <div class="hero-slide" style="background: rgb(0,155,0);">
                 hero unit 2
             </div>
-            <div class="heroSlide">
+            <div class="hero-slide" style="background: rgb(0,0,155);">
                 hero unit 3
             </div>
         </div>
         <script type="text/javascript">
             $(document).ready(function() { 
-                $('#heroSlider').heroSlider();
+                $('#hero-slider').heroSlider();
             });
         </script>
     </body>
