--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <title>heroSlider demo</title>
         <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
-        <link rel="stylesheet" type="text/css" href="assets/styles/heroSlider.css" />
+        <link rel="stylesheet" type="text/css" href="heroSlider/styles/heroSlider.css" />
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
-        <script type="text/javascript" src="assets/javascript/heroSlider.js"></script>
+        <script type="text/javascript" src="heroSlider/javascript/heroSlider.js"></script>
+        <script type="text/javascript" src="assets/javascript/index.js"></script>
     </head>
     <body>
         <div id="hero-slider">
@@ -20,10 +21,5 @@
                 hero unit 3
             </div>
         </div>
-        <script type="text/javascript">
-            $(document).ready(function() { 
-                $('#hero-slider').heroSlider();
-            });
-        </script>
     </body>
 </html>
